Header fungerer og er responsiv nå

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <style lang="scss">@import '@vtfk/components/src/ui/BaseStyle/BaseStyle.scss'</style>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style="width: 100vw; height: 100vh;">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
