--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <style lang="scss">@import '@vtfk/components/src/ui/BaseStyle/ResetStyle.scss'</style>
     <style lang="scss">@import '@vtfk/components/src/ui/BaseStyle/BaseStyle.scss'</style>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Masseutsendelse</title>
   </head>
   <body style="width: 100vw; height: 100vh;">
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Masseutsendelse doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
