--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,8 @@
     <style lang="scss">@import '@vtfk/components/src/ui/BaseStyle/ResetStyle.scss'</style>
     <style lang="scss">@import '@vtfk/components/src/ui/BaseStyle/BaseStyle.scss'</style>
     <title>Masseutsendelse</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body style="width: 100vw; height: 100vh;">
     <noscript>
